# pakkan-pdf

./: README.md  pyproject.toml  tox.ini
pakkanpdf/: __init__.py  core.py  exceptions.py
tests/: test_sample.py
